# SplitKey

./: .gitignore  Cargo.toml  LICENSE  OVERVIEW.md  README.md  demo-release-loop.sh
Ceremony/: README.md
Ceremony/ceremony-cli/: Cargo.toml
Ceremony/ceremony-cli/src/: lib.rs  main.rs  pdf.rs
Ceremony/ceremony-cli/tests/: ceremony.rs
Examples/maple-street-secrets/: admin.key  admin.pub  manifest.skm
Examples/maple-street-secrets/booklets/: alice.txt  bob.txt  carol.txt  dave.txt  erin.txt
Examples/splitkey-motion-cam/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  extract-video.sh  fetch-binaries.sh
Examples/splitkey-motion-cam/config/: motion.conf  sealer.toml
Keyholders/: README.md
Keyholders/keeper-cli/: Cargo.toml
Keyholders/keeper-cli/src/: combine.rs  lib.rs  list.rs  main.rs  release.rs  skc.rs  store.rs
Keyholders/keeper-cli/tests/: full_loop.rs
Sealer/: Cargo.toml  README.md  demo-usbcam.sh  demo.sh
Sealer/crates/sealer-chain/: Cargo.toml
Sealer/crates/sealer-chain/src/: lib.rs
Sealer/crates/sealer-cli/: Cargo.toml
Sealer/crates/sealer-cli/src/: main.rs
Sealer/crates/sealer-cli/tests/: tamper.rs
Sealer/crates/sealer-crypto/: Cargo.toml
Sealer/crates/sealer-crypto/src/: hash.rs  kdf.rs  lib.rs  sealbox.rs  secretstream.rs  sign.rs
Sealer/crates/sealer-keys/: Cargo.toml
Sealer/crates/sealer-keys/src/: lib.rs
Sealer/crates/sealerd/: Cargo.toml
Sealer/crates/sealerd/src/: config.rs  lib.rs  pipe.rs  pipeline.rs  seal.rs  state.rs  upload.rs  watch.rs
Sealer/crates/sealerd/tests/: pipe_mode.rs  pipeline.rs
Sealer/crates/sks-format/: Cargo.toml
Sealer/crates/sks-format/src/: lib.rs  read.rs  types.rs  write.rs
Sealer/docs/: 00-architecture.md  01-crypto-design.md  02-key-management.md  03-segment-format.md  04-tamper-evidence.md  05-ingestion.md  06-storage.md  07-configuration.md  08-qr-actions.md  09-platforms-builds-testing.md  10-roadmap.md  11-open-questions.md  12-ideas-for-splitkey.md
Sealer/recipes/: linux-continuous.md  linux-motion.md
Sealer/sim/: Dockerfile  README.md  docker-compose.yml
Sealer/sim/config/: sealer.toml
Sealer/sim/scripts/: camera-sim.sh  ceremony-init.sh  sealerd-entry.sh  verifier.sh
crates/sk-shares/: Cargo.toml  README.md
crates/sk-shares/src/: booklet.rs  dates.rs  gf256.rs  lib.rs  words.rs
crates/sk-shares/tests/: vectors.rs
plans/: community-signing.md  keeper-app.md  sealer-app.md
