[package]
name = "sealer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sks"
path = "src/main.rs"

[dependencies]
sks-format = { workspace = true }
sealer-crypto = { workspace = true }
sealer-chain = { workspace = true }
sealer-keys = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
