[package]
name = "sks-format"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sealer-crypto = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
